[tool.poetry]
name = "uptime-checker"
version = "0.1.0"
description = ""
authors = ["Logan <10239411+Loag@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.1"
grequests = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
